fix label spacing

--- a/src/pages/contact/contact.module.scss
+++ b/src/pages/contact/contact.module.scss
@@ -15,7 +15,7 @@
     label {
       display: block;
 
-      & > :first-child {
+      & > :last-child {
         margin-top: var(--thin);
       }
     }
